# speaker-relay

./: .gitignore  README.md  global.d.ts  index.html  jsconfig.json  main.py  package.json  pyproject.toml  requirements.txt
speaker_relay/: __init__.py  live.py  main.py
speaker_relay/static/: app.html  app.jsx
tests/: test_speaker_relay.py
